Config Currency gRPC, implement it into Product API
