# product-api/handlers/get.go
@@ -1,11 +1,14 @@
 package handlers
 
 import (
-	"demo/data"
+	"context"
 	"errors"
-	"github.com/gorilla/mux"
+	protos "github.com/thinhhja2001/currency/protos"
 	"net/http"
 	"strconv"
+
+	"example.com/hello/data"
+	"github.com/gorilla/mux"
 )
 
 // swagger:route GET /products products listProducts
@@ -52,6 +55,17 @@ func (p Products) GetSingleProduct(rw http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	rr := &protos.RateRequest{
+		Base:        protos.Currencies(protos.Currencies_value["EUR"]),
+		Destination: protos.Currencies(protos.Currencies_value["GBP"]),
+	}
+	resp, err := p.cc.GetRate(context.Background(), rr)
+	if err != nil {
+		p.l.Println("[ERROR] error getting new Rate")
+		http.Error(rw, "Unable to get Rate Request", http.StatusInternalServerError)
+		return
+	}
+	product.Price = product.Price * resp.Rate
 	err = product.ToJSON(rw)
 	if err != nil {
 		http.Error(rw, "Unable to marshal json", http.StatusInternalServerError)
